--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -1,10 +1,13 @@
 alembic==1.16.4
 aniso8601==10.0.1
+backports-datetime-fromisoformat==2.0.3
 blinker==1.9.0
 click==8.2.1
 Flask==3.1.1
+flask-cors==6.0.1
+flask-marshmallow==1.3.0
 Flask-Migrate==4.1.0
-Flask-restful==0.3.10
+Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
 itsdangerous==2.2.0
@@ -17,5 +20,6 @@ python-dotenv==1.1.1
 pytz==2025.2
 six==1.17.0
 SQLAlchemy==2.0.42
+tomli==2.2.1
 typing_extensions==4.14.1
 Werkzeug==3.1.3
