--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -5,17 +5,22 @@ blinker==1.9.0
 click==8.2.1
 Flask==3.1.1
 flask-cors==6.0.1
+Flask-JWT-Extended==4.7.1
 flask-marshmallow==1.3.0
 Flask-Migrate==4.1.0
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
 marshmallow==4.0.0
 marshmallow-sqlalchemy==1.4.2
+packaging==25.0
+psycopg2-binary==2.9.10
+PyJWT==2.10.1
 python-dotenv==1.1.1
 pytz==2025.2
 six==1.17.0
